Bug 104041 - 4.2 kernel: many *ERROR* mismatch in has_drrs
Summary: 4.2 kernel: many *ERROR* mismatch in has_drrs
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: intel-gfx-bugs@lists.freedesktop.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-04 14:10 UTC by Takashi Iwai
Modified: 2015-10-07 11:25 UTC (History)
1 user (show)

See Also:
Kernel Version: 4.2
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg output (75.88 KB, text/plain)
2015-09-04 14:10 UTC, Takashi Iwai
Details

Description Takashi Iwai 2015-09-04 14:10:42 UTC
Created attachment 186721 [details]
dmesg output

This originates from another bug 104001.

4.2 kernel spews many kernel warnings on HP EliteBook 940 G1 laptop with Haswell chip.

At booting:

[    5.205358] [drm:intel_pipe_config_compare [i915]] *ERROR* mismatch in has_drrs (expected 1, found 0)
[    5.205361] ------------[ cut here ]------------
[    5.205387] WARNING: CPU: 3 PID: 76 at drivers/gpu/drm/i915/intel_display.c:12691 intel_modeset_check_state+0x5a4/0x870 [i915]()
[    5.205388] pipe state doesn't match!

At plugging DP on dock (MST):

[   33.096865] [drm:intel_pipe_config_compare [i915]] *ERROR* mismatch in has_drrs (expected 1, found 0)
[   33.096876] ------------[ cut here ]------------
[   33.096916] WARNING: CPU: 3 PID: 988 at drivers/gpu/drm/i915/intel_display.c:12691 intel_modeset_check_state+0x5a4/0x870 [i915]()
[   33.096919] pipe state doesn't match!
....
[   33.230467] WARNING: CPU: 3 PID: 988 at drivers/gpu/drm/i915/intel_display.c:6330 intel_modeset_check_state+0x112/0x870 [i915]()
[   33.230472] attached crtc is active, but connector isn't

At unplugging DP:

[  218.764695] [drm:intel_pipe_config_compare [i915]] *ERROR* mismatch in has_drrs (expected 1, found 0)
[  218.764706] ------------[ cut here ]------------
[  218.764739] WARNING: CPU: 3 PID: 988 at drivers/gpu/drm/i915/intel_display.c:12691 intel_modeset_check_state+0x5a4/0x870 [i915]()
[  218.764741] pipe state doesn't match!

Note that this is the patched kernel based on vanilla 4.2 and pulling drm-intel-next-fixes (commit 4e3d1e26c2b2c40ebff69f2825fa862bfcf082d1).
Comment 1 Jani Nikula 2015-10-07 11:25:17 UTC
Presumed fixed upstream, closing.

If the problem persists with latest kernels, please file a bug at the freedesktop.org bugzilla [1], referencing this bug. Thank you.

[1] https://bugs.freedesktop.org/enter_bug.cgi?product=DRI&component=DRM/Intel

Note You need to log in before you can comment on or make changes to this bug.